gcc/testsuite/gm2/pim/pass/forloopby2.mod
MODULE forloopby2 ;

TYPE
   negative = [-10..-1] ;


PROCEDURE init ;
VAR
   i: negative ;
BEGIN
   FOR i := MIN (negative) TO MAX (negative) DO
   END
END init ;


BEGIN
   init
END forloopby2.
