gcc/testsuite/gm2/pim/fail/tinyfor4.mod
MODULE tinyfor4 ;  

VAR
  v: INTEGER;
BEGIN
   FOR i := 0 TO v DO END
END tinyfor4.
